// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.md correctly 1`] = `
<div>
  <div class="gov-spin gov-spin-spinning"><span class="gov-spin-dot gov-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.md correctly 1`] = `
<div>
  <div class="gov-spin gov-spin-spinning"><i class="anticon anticon-loading gov-spin-dot" style="font-size: 24px;"><svg viewBox="0 0 1024 1024" data-icon="loading" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="anticon-spin">
        <path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"></path>
      </svg></i></div>
  <div class="gov-spin gov-spin-spinning"><i class="anticon anticon-loading gov-spin-dot" style="font-size: 24px;"><svg viewBox="0 0 1024 1024" data-icon="loading" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="anticon-spin">
        <path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"></path>
      </svg></i></div>
</div>
`;

exports[`renders ./components/spin/demo/delayAndDebounce.md correctly 1`] = `
<div>
  <div class="gov-spin-nested-loading">
    <div class="gov-spin-container">
      <div class="spin-content">
        可以点击‘切换’按钮，延迟显示 loading 效果。当 spinning 状态在 \`delay\` 时间内结束，则不显示 loading 状态。
      </div>
    </div>
  </div>
  Loading state：<button type="button" role="switch" class="gov-switch"><span class="gov-switch-inner"></span></button>
</div>
`;

exports[`renders ./components/spin/demo/inside.md correctly 1`] = `
<div class="example">
  <div class="gov-spin gov-spin-spinning"><span class="gov-spin-dot gov-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
</div>
`;

exports[`renders ./components/spin/demo/nested.md correctly 1`] = `
<div>
  <div class="gov-spin-nested-loading">
    <div class="gov-spin-container">
      <div class="spin-content">
        可以点击‘切换’按钮，控制本区域的spin展示。
      </div>
    </div>
  </div>
  Loading state：<button type="button" role="switch" class="gov-switch"><span class="gov-switch-inner"></span></button>
</div>
`;

exports[`renders ./components/spin/demo/size.md correctly 1`] = `
<div>
  <div class="gov-spin gov-spin-sm gov-spin-spinning"><span class="gov-spin-dot gov-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
  <div class="gov-spin gov-spin-spinning"><span class="gov-spin-dot gov-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
  <div class="gov-spin gov-spin-lg gov-spin-spinning"><span class="gov-spin-dot gov-spin-dot-spin"><i></i><i></i><i></i><i></i></span></div>
</div>
`;

exports[`renders ./components/spin/demo/tip.md correctly 1`] = `
<div>
  <div class="gov-spin-nested-loading">
    <div>
      <div class="gov-spin gov-spin-spinning gov-spin-show-text"><span class="gov-spin-dot gov-spin-dot-spin"><i></i><i></i><i></i><i></i></span>
        <div class="gov-spin-text">Loading...</div>
      </div>
    </div>
    <div class="gov-spin-container gov-spin-blur">
      <div class="spin-content">
        我的描述文案是自定义的。。。
      </div>
    </div>
  </div>
</div>
`;
